@@ -284,3 +284,6 @@ Revision history for Perl extension ClearCase::Argv.
 1.42 Tue Oct  7 15:28:25 BST 2008
 	- exit code in the END clause, from the cygwin branch
 	- restored cleartool -status, new workaround for ClearCase setview bug
+	- restricted the setview test to dynamic views
+	- added one test case for setview -exec constructs
+	- fix (Tatiana Shpichko) to bmccug example
